[gd_scene load_steps=57 format=2]

[ext_resource path="res://assets/imgs/hud/home_clouds.png" type="Texture" id=1]
[ext_resource path="res://assets/audio/sfx/click.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/sfx/switch.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/imgs/hud/chapter_count.png" type="Texture" id=4]
[ext_resource path="res://assets/imgs/hud/pamphlet_count.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/PottaOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/hud/home.gd" type="Script" id=9]
[ext_resource path="res://scenes/hud/home_background_layer.gd" type="Script" id=10]
[ext_resource path="res://assets/imgs/hud/start_on.png" type="Texture" id=11]
[ext_resource path="res://assets/imgs/hud/start_off.png" type="Texture" id=12]
[ext_resource path="res://assets/imgs/hud/exit_off.png" type="Texture" id=13]
[ext_resource path="res://assets/imgs/hud/exit_on.png" type="Texture" id=14]
[ext_resource path="res://assets/imgs/hud/pointer.png" type="Texture" id=15]
[ext_resource path="res://assets/imgs/hud/save2_off.png" type="Texture" id=16]
[ext_resource path="res://assets/imgs/hud/save3_on.png" type="Texture" id=17]
[ext_resource path="res://assets/imgs/hud/save4_off.png" type="Texture" id=18]
[ext_resource path="res://assets/imgs/hud/save4_on.png" type="Texture" id=19]
[ext_resource path="res://assets/imgs/hud/save2_on.png" type="Texture" id=20]
[ext_resource path="res://assets/imgs/hud/save1_on.png" type="Texture" id=21]
[ext_resource path="res://assets/imgs/hud/save1_off.png" type="Texture" id=22]
[ext_resource path="res://assets/imgs/hud/save3_off.png" type="Texture" id=23]
[ext_resource path="res://assets/imgs/hud/chapter4_off.png" type="Texture" id=24]
[ext_resource path="res://assets/imgs/hud/chapter7_off.png" type="Texture" id=25]
[ext_resource path="res://assets/imgs/hud/chapter2_on.png" type="Texture" id=26]
[ext_resource path="res://assets/imgs/hud/chapter8_off.png" type="Texture" id=27]
[ext_resource path="res://assets/imgs/hud/chapter5_on.png" type="Texture" id=28]
[ext_resource path="res://assets/imgs/hud/chapter6_on.png" type="Texture" id=29]
[ext_resource path="res://assets/imgs/hud/chapter7_on.png" type="Texture" id=30]
[ext_resource path="res://assets/imgs/hud/chapter8_on.png" type="Texture" id=31]
[ext_resource path="res://assets/imgs/hud/chapter5_off.png" type="Texture" id=32]
[ext_resource path="res://assets/imgs/hud/chapter2_off.png" type="Texture" id=33]
[ext_resource path="res://assets/imgs/hud/chapter6_off.png" type="Texture" id=34]
[ext_resource path="res://assets/imgs/hud/chapter1_on.png" type="Texture" id=35]
[ext_resource path="res://assets/imgs/hud/chapter3_off.png" type="Texture" id=36]
[ext_resource path="res://assets/imgs/hud/chapter1_off.png" type="Texture" id=37]
[ext_resource path="res://assets/imgs/hud/chapter3_on.png" type="Texture" id=38]
[ext_resource path="res://assets/imgs/hud/chapter4_on.png" type="Texture" id=39]
[ext_resource path="res://assets/imgs/hud/home_back.png" type="Texture" id=40]
[ext_resource path="res://assets/imgs/hud/select.png" type="Texture" id=41]
[ext_resource path="res://assets/imgs/hud/back.png" type="Texture" id=42]
[ext_resource path="res://assets/imgs/hud/title.png" type="Texture" id=43]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 21 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 20 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 17 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 35 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 26 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 38 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 39 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 39 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 28 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 29 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 30 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 31 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[node name="Home" type="Node"]
script = ExtResource( 9 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 960, 256 )
texture = ExtResource( 43 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxBack" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 3840, 0 )
script = ExtResource( 10 )
speed = 16

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxBack"]
position = Vector2( 1920, 544 )
scale = Vector2( 1, 1.00021 )
texture = ExtResource( 40 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 3840, 0 )
script = ExtResource( 10 )
speed = 32

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1920, 544 )
texture = ExtResource( 1 )

[node name="Buttons" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="Node2D" parent="Buttons"]
visible = false

[node name="Start" type="AnimatedSprite" parent="Buttons/StartScreen"]
position = Vector2( 960, 448 )
frames = SubResource( 1 )
animation = "click"
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="AnimatedSprite" parent="Buttons/StartScreen"]
position = Vector2( 960, 512 )
frames = SubResource( 2 )
animation = "click"
__meta__ = {
"_edit_lock_": true
}

[node name="Pointer" type="Sprite" parent="Buttons/StartScreen"]
position = Vector2( 880, 384 )
texture = ExtResource( 15 )

[node name="SaveSelect" type="Node2D" parent="Buttons"]

[node name="Save1" type="AnimatedSprite" parent="Buttons/SaveSelect"]
position = Vector2( 960, 384 )
frames = SubResource( 3 )
animation = "click"
__meta__ = {
"_edit_lock_": true
}

[node name="ChapterCount" type="Sprite" parent="Buttons/SaveSelect/Save1"]
position = Vector2( 120, 0 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="RichTextLabel" parent="Buttons/SaveSelect/Save1/ChapterCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -33.0
margin_right = 42.0
margin_bottom = 7.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PamphletCount" type="Sprite" parent="Buttons/SaveSelect/Save1"]
position = Vector2( 214, 0 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="RichTextLabel" parent="Buttons/SaveSelect/Save1/PamphletCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -33.0
margin_right = 42.0
margin_bottom = 7.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Save2" type="AnimatedSprite" parent="Buttons/SaveSelect"]
position = Vector2( 960, 448 )
frames = SubResource( 5 )
animation = "click"
__meta__ = {
"_edit_lock_": true
}

[node name="ChapterCount" type="Sprite" parent="Buttons/SaveSelect/Save2"]
position = Vector2( 120, 0 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="RichTextLabel" parent="Buttons/SaveSelect/Save2/ChapterCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -33.0
margin_right = 42.0
margin_bottom = 7.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PamphletCount" type="Sprite" parent="Buttons/SaveSelect/Save2"]
position = Vector2( 214, 0 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="RichTextLabel" parent="Buttons/SaveSelect/Save2/PamphletCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -33.0
margin_right = 42.0
margin_bottom = 7.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Save3" type="AnimatedSprite" parent="Buttons/SaveSelect"]
position = Vector2( 960, 512 )
frames = SubResource( 6 )
animation = "click"
__meta__ = {
"_edit_lock_": true
}

[node name="ChapterCount" type="Sprite" parent="Buttons/SaveSelect/Save3"]
position = Vector2( 120, 0 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="RichTextLabel" parent="Buttons/SaveSelect/Save3/ChapterCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -33.0
margin_right = 42.0
margin_bottom = 7.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PamphletCount" type="Sprite" parent="Buttons/SaveSelect/Save3"]
position = Vector2( 214, 0 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="RichTextLabel" parent="Buttons/SaveSelect/Save3/PamphletCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -33.0
margin_right = 42.0
margin_bottom = 7.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Save4" type="AnimatedSprite" parent="Buttons/SaveSelect"]
position = Vector2( 960, 576 )
frames = SubResource( 7 )
animation = "click"
__meta__ = {
"_edit_lock_": true
}

[node name="ChapterCount" type="Sprite" parent="Buttons/SaveSelect/Save4"]
position = Vector2( 120, 0 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="RichTextLabel" parent="Buttons/SaveSelect/Save4/ChapterCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -33.0
margin_right = 42.0
margin_bottom = 7.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PamphletCount" type="Sprite" parent="Buttons/SaveSelect/Save4"]
position = Vector2( 214, 0 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="RichTextLabel" parent="Buttons/SaveSelect/Save4/PamphletCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -33.0
margin_right = 42.0
margin_bottom = 7.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Pointer" type="Sprite" parent="Buttons/SaveSelect"]
position = Vector2( 880, 578 )
texture = ExtResource( 15 )

[node name="ChapterSelect" type="Node2D" parent="Buttons"]
visible = false

[node name="Chapter1" type="AnimatedSprite" parent="Buttons/ChapterSelect"]
frames = SubResource( 8 )
animation = "click"

[node name="Chapter2" type="AnimatedSprite" parent="Buttons/ChapterSelect"]
frames = SubResource( 9 )
animation = "click"

[node name="Chapter3" type="AnimatedSprite" parent="Buttons/ChapterSelect"]
frames = SubResource( 10 )
animation = "click"

[node name="Chapter4" type="AnimatedSprite" parent="Buttons/ChapterSelect"]
frames = SubResource( 11 )
animation = "click"

[node name="Chapter5" type="AnimatedSprite" parent="Buttons/ChapterSelect"]
frames = SubResource( 12 )
animation = "click"

[node name="Chapter6" type="AnimatedSprite" parent="Buttons/ChapterSelect"]
frames = SubResource( 13 )
animation = "click"

[node name="Chapter7" type="AnimatedSprite" parent="Buttons/ChapterSelect"]
frames = SubResource( 14 )
animation = "click"

[node name="Chapter8" type="AnimatedSprite" parent="Buttons/ChapterSelect"]
position = Vector2( 960, 448 )
frames = SubResource( 15 )
animation = "click"

[node name="Pointer" type="Sprite" parent="Buttons/ChapterSelect"]
position = Vector2( 832, 448 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Back" type="Sprite" parent="."]
position = Vector2( 128, 1024 )
texture = ExtResource( 42 )

[node name="Select" type="Sprite" parent="."]
position = Vector2( 256, 1024 )
texture = ExtResource( 41 )

[node name="Switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
